main.css
/* Styles for Product Page Customization */
/* NOTE: Do not edit the Bootstrap CSS files. */

body {
	background-image: url('assets/misc/dirt-background.jpg');
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	color: white;
}
#header img {
	height: 300px;
	width: 300px;
}
#header {
	margin-bottom: 2rem;
	background-image: url('assets/misc/landscape-header.jpg');
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}
#social a:hover {
	opacity: 0.7;
}
#youtube-video {
	margin-top: 2rem;
}
#product-description p {
	line-height: 2.5;
}
#features ul {
	line-height: 2.5;
}
#buy-now button {
	width: 100%;
	margin: 2rem 0;
}
#contact-info img {
	width: 100%;
	height: auto;
}
#contact-info p{
	margin: 0;
}

